@@ -1,3 +1,8 @@
+2005-06-14  Vlad Seryakov  <seryakov@users.sf.net>
+
+	nsd/binder.c: added missing listen call to Ns_SockListenUnix
+	function.
+
 2005-06-14  Zoran Vasiljevic  <vasiljevic@users.sf.net>
 
 	* nsd/adpeval.c: Reformat to NaviServer coding style
